Fix spacing

--- a/css/theme/style.css
+++ b/css/theme/style.css
@@ -1933,7 +1933,7 @@ th {
   /* line 56, ../../sass/partials/_helpers.scss */
   .two--table--mailinglist {
     display: table;
-    height: 77vh;
+    height: 80vh;
   }
 }
 
