--- a/sass/partials/_helpers.scss
+++ b/sass/partials/_helpers.scss
@@ -56,7 +56,7 @@
 .two--table--mailinglist {
 	@include at-query($two) {
 		display: table;
-		height: 77vh
+		height: 80vh
 	}
 }
 
